--- a/card_detail.html
+++ b/card_detail.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./styles/preferences.css">
+  <link rel="stylesheet" href="./styles/card_detail.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -22,7 +22,7 @@
 <body>
   <div class="container">
     <div class="navigation">
-      <div class="symbol" id="symbol"> <a href="./index.html"></a></div>
+      <div class="symbol" id="symbol"></div>
       <div class="navi-1">
         <nav>
           <ul>
@@ -41,11 +41,32 @@
       </div>
     </div>
     <div class="page-1">
-  </div>
-  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-    crossorigin="anonymous"></script>
-  <script src="./js/card_detail.js"></script>
-  
+      <div class="title1">
+        <div class="text"> Creat eGift</div>
+      </div>
+      <div class="card">
+        <div class="inner-card"></div>
+      </div>
+      <div class="option">
+        <div class="title-option">
+          <div class="option-text">
+            Who are you gifting to?
+          </div>
+          <hr>
+        </div>
+        <div class="form">
+        <form>
+          <input type="text" placeholder="Name" class="input" >
+          <br>
+          <input type="number" placeholder="Telephone" class="input" >
+        </form>
+      </div>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="./js/card_detail.js"></script>
+
 </body>
 
 </html>
