--- a/delivery.html
+++ b/delivery.html
@@ -75,11 +75,23 @@
               </Div>
             </div>
             <div class="step2">
-              <video   height = "269px" width =  "600px" autoplay controls="false">
-                <source src="https://www.starbucks.com.au/assets/uploads/2023/12/Star-Rewards-Intro-Tile.mp4" type="video/mp4"
+              <video height="340px" width="677px" autoplay controls>
+                <source src="https://www.starbucks.com.au/assets/uploads/2023/12/Star-Rewards-Intro-Tile.mp4"
+                  type="video/mp4">
               </video>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="location">
+        <div class="text-location"> FIND A LOCATION &nbsp; <i class="fa-solid fa-map-location-dot"></i>
+        </div>
+      </div>
+      <div class="page-2">
+        <Div class="maps"> <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59601.54481426291!2d105.67861252167967!3d20.9887665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313453dc39fa879f%3A0x69eb6510ef3c667!2zU3RhcmJ1Y2tzIEFlb24gSMOgIMSQw7RuZw!5e0!3m2!1sen!2s!4v1706411891415!5m2!1sen!2s"
+            width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
       <div class="footer">
