--- a/giftcard.html
+++ b/giftcard.html
@@ -32,7 +32,7 @@
     </div>
     <div class="navi-2">
       <div class="button">
-        <button class="signin"><a href="./signin.html"></a> Sign in</button>
+        <button class="signin" id="signin"><a href="./signin.html"></a> Sign in</button>
         <button class="joinnoww"> Join now</button>
       </div>
       <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
@@ -41,10 +41,10 @@
   <div class="page-1">
     <div class="featured-card">
       <div class="featured-title"> FEATURED</div>
-      <div class="container-featured">
-        <div class="card featured-card1" id="card"><a href="./card_detail.html"></a></div>
-        <div class="card featured-card2" id="card"></div>
-        <div class="card featured-card3" id="card"></div>
+      <div class="container-featured" id="card">
+        <div class="card featured-card1" id="card" ></div>
+        <div class="card featured-card2" id="card" ></div>
+        <div class="card featured-card3" id="card" ></div>
         <div class="card featured-card4" id="card"></div>
       </div>
     </div>
@@ -52,21 +52,21 @@
       <div class="receive-text">Receive a Gift Card Today!</div>
       <div class="receive-text1">Earns 2★Stars per $1</div>
       <Div class="two-button">
-        <button class="add"> Add or reload</button>
+        <button class="add" id="add"> Add or reload</button>
         <button class="balance"> Check balance</button>
       </Div>
 
     </div>
     <div class="featured-card ">
       <div class="featured-title"> LUNAR NEW YEAR | 2/10</div>
-      <div class="container-featured">
+      <div class="container-featured" id="card">
         <div class="card featured-card3" id="card"></div>
       </div>
     </div>
     <div class="gap"></div>
     <div class="featured-card bottom-card">
       <div class="featured-title" > VALENTINE | 14/2</div>
-      <div class="container-featured">
+      <div class="container-featured" id="card">
         <div class="card featured-card6" id="card"></div>
         <div class="card featured-card7" id="card"></div>
       </div>
@@ -74,7 +74,7 @@
     <div class="gap"></div>
     <div class="featured-card bottom-card">
       <div class="featured-title"> BIRTHDAY</div>
-      <div class="container-featured">
+      <div class="container-featured" id="card">
         <div class="card featured-card8" id="card" ></div>
         <div class="card featured-card9" id="card"></div>
         <div class="card featured-card10"id="card"></div>
@@ -83,11 +83,71 @@
     <div class="gap"></div>
     <div class="featured-card bottom-card">
       <div class="featured-title"> AFFECTION</div>
-      <div class="container-featured">
+      <div class="container-featured" id="card">
         <div class="card featured-card11" id="card"></div>
         <div class="card featured-card12" id="card"></div>
         <div class="card featured-card13" id="card"></div>
         <div class="card featured-card14" id="card"></div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer-main">
+        <div class="container-col">
+          <div class="col">
+            <div class="col-title">
+              COFFEE
+            </div>
+            <div class="col-text">
+              <p class="p">Whole Bean Coffee</p>
+              <p class="p">Ethical Sourcing</p>
+              <p class="p">Coffee Tasting</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-title">
+              MENU
+            </div>
+            <div class="col-text">
+              <p class="p">Beverages</p>
+              <p class="p">Food</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-title">
+              MERCHANDISE
+            </div>
+            <div class="col-text">
+              <p class="p">Online Store</p>
+              <p class="p">Terms & Conditions</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-title">
+              SHARE
+            </div>
+            <div class="col-text1">
+              <i class="fa-brands fa-facebook"></i></li>
+              <i class="fa-brands fa-twitter"></i></li>
+              <i class="fa-brands fa-instagram"></i></li>
+            </div>
+          </div>
+        </div>
+        <div class="footer-starbuck">
+          <img src="https://www.starbucks.com.au/assets/uploads/2023/06/logo-starbucks-wordmark.svg">
+        </div>
+      </div>
+      <div class="footer-line">
+        <div class="line-right">
+          Copyright © 2023. Starbucks Coffee Australia. All Rights Reserved.
+        </div>
+        <div class="line-left">
+          <div class="left-1">
+            Privacy Policy
+          </div>
+          <div class="left-2">
+            Terms of Use
+          </div>
+        </div>
       </div>
     </div>
   </div>
